--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h3{
     font-size: 1.75em;
 }
 
-input{
+input[type="checkbox"]{
     height:20px;
     width:20px;
     margin-right:5px;
@@ -64,6 +64,52 @@ button{
 button:hover{
     background:#0e0d0d;
     color:#fff;
+}
+
+.timer{
+    display: flex;
+    flex-direction: column;
+}
+
+.timer-div{
+    display: flex;
+    flex-direction: row;
+    margin:10px 0;
+}
+
+.timer-form{
+    margin-right: 20px;
+}
+
+input[type="text"]{
+    width:40px;
+    margin:5px;
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.footer{
+    background:#191919;
+    text-align: center;
+    padding:10px;
+    font-size:18px;
+}
+
+.contact-links{
+    display: flex;
+    justify-content: center;
+    margin-top:10px;
+    align-items: center;
+}
+
+a{
+    color:#fff;
+    text-decoration: none;
+    margin-right:10px;
+}
+
+i{
+    font-size: 24px;
 }
 
 @media only screen and (max-width:600px) {
@@ -106,6 +152,7 @@ button:hover{
         padding:10px 15px;
         border-radius:10px;
         cursor:pointer;
+        margin:10px;
     }
     
     button:hover{
