--- a/style.css
+++ b/style.css
@@ -2,17 +2,49 @@
     box-sizing: border-box;
     margin:0;
     padding: 0;
+    outline: 0;
+
 }
 
 body{
     background:#1F1D36;
     color:#FFFFFF;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-x: hidden;
+}
+
+.login-section{
+    width:350px;
+    height:400px;
+    /* display: none; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin:0 auto;
+    /* background:red; */
+}
+
+.login-section label{
+    font-size: 1.15em;
+    margin:10px;
+}
+
+.login-section input{
+    border:2px solid #000;
+    padding:5px 10px;
+    width:200px;
+    border-radius:20px;
+    font-size:1em;
+    text-align: center;
+    color:#000;
+    margin:20px;
 }
 
 .container{
     padding:2em;
-    display: flex;
+    display: none;
+    /* display:flex; */
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -20,7 +52,8 @@ body{
 
 h1{
     font-size: 4.5em;
-    margin:10px;
+    margin:15px;
+    text-align: center;
 }
 
 h3{
@@ -81,11 +114,21 @@ button:hover{
     margin-right: 20px;
 }
 
-input[type="text"]{
+.timer-form input[type="text"]{
     width:40px;
     margin:5px;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.score{
+    background:rgba(0, 0, 0, 0.4);
+    border:2px solid #f1f1f1;
+    border-radius:10px;
+    padding:10px;
+    position: absolute;
+    right:10px;
+    top:10px;
 }
 
 .footer{
@@ -93,6 +136,12 @@ input[type="text"]{
     text-align: center;
     padding:10px;
     font-size:18px;
+    width:100vw;
+}
+
+.footer.before{
+    position: fixed;
+    bottom:0;
 }
 
 .contact-links{
@@ -154,7 +203,6 @@ i{
         cursor:pointer;
         margin:10px;
     }
-    
     button:hover{
         background:#0e0d0d;
         color:#fff;
