--- a/style.css
+++ b/style.css
@@ -16,17 +16,15 @@ body{
 .login-section{
     width:350px;
     height:400px;
-    /* display: none; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin:0 auto;
-    /* background:red; */
 }
 
 .login-section label{
-    font-size: 1.15em;
+    font-size: 18px;
     margin:10px;
 }
 
@@ -35,29 +33,28 @@ body{
     padding:5px 10px;
     width:200px;
     border-radius:20px;
-    font-size:1em;
+    font-size:16px;
     text-align: center;
     color:#000;
     margin:20px;
 }
 
 .container{
-    padding:2em;
+    padding:32px;
     display: none;
-    /* display:flex; */
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 h1{
-    font-size: 4.5em;
+    font-size: 72px;
     margin:15px;
     text-align: center;
 }
 
 h3{
-    font-size: 1.75em;
+    font-size: 28px;
 }
 
 input[type="checkbox"]{
@@ -131,17 +128,49 @@ button:hover{
     top:10px;
 }
 
+.overlay{
+    height:100vh;
+    width:100vw;
+    background:rgba(20, 20, 20, 0.671);
+    position: absolute;
+    display: none;
+    top:0;
+    z-index:1;
+    backdrop-filter: blur(10px);
+}
+
+.modal{
+    height:250px;
+    width:300px;
+    display:none;
+    place-items: center;
+    position: absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    background: #191919cb;
+    border:2px solid #000;
+    border-radius: 10px;
+    backdrop-filter: blur(20px);
+    z-index:2;
+}
+
+.btn-group button{
+    margin:10px;
+}
+
 .footer{
     background:#191919;
     text-align: center;
     padding:10px;
     font-size:18px;
-    width:100vw;
+    width:100%;
 }
 
 .footer.before{
-    position: fixed;
+    position: absolute;
     bottom:0;
+    z-index:1;
 }
 
 .contact-links{
