--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ i{
     display: flex;
     position: absolute;
     bottom:100px;
-    left:20px;
+    right:20px;
     border-radius:20px;
     transform:translateX(-1000px);
     transition: transform 0.4s;
