--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ i{
     bottom:100px;
     right:20px;
     border-radius:20px;
-    transform:translateX(-1000px);
+    transform:translateX(+1000px);
     transition: transform 0.4s;
 
 }
@@ -219,17 +219,17 @@ i{
     font-weight:700;
 }
 .timeup{
-    border:3px solid rgb(255, 0, 0); 
+    border:5px solid rgb(255, 0, 0); 
     color:rgb(255, 0, 0); 
 }
 
 .success{
-    border:3px solid rgb(30, 207, 30); 
+    border:5px solid rgb(30, 207, 30); 
     color:rgb(30, 207, 30);
 }
 
 .failure{
-    border:3px solid rgb(255, 136, 0);
+    border:5px solid rgb(255, 136, 0);
     color:rgb(255, 136, 0);
 }
 
